# HW_django

./: .gitignore  docker-compose.yml  pyproject.toml
student_journal/: manage.py
student_journal/api/: models.py  serializers.py  signals.py  urls.py  views.py
student_journal/api/migrations/: 0001_initial.py  0002_alter_subject_name.py
student_journal/api/serializers/: comments.py  grades.py  students.py  students_to_subjects.py  subjects.py  teachers.py  teachers_to_subjects.py
student_journal/api/views/: comments.py  grades.py  students.py  students_to_subjects.py  subjects.py  teachers.py  teachers_to_subjects.py
student_journal/student_journal/: asgi.py  settings.py  urls.py  wsgi.py
